--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
 
 }
 
-body{
-	background: #1C1C1C;;
+html,body{
+	height: 100%;
+	background: black;
 }
+
+.container-flex{
+	width: 100%;
+	height: 5rem;
+	border-radius: 1px 7rem;
+	background-color:greenyellow;
+}
+
