--- a/style.css
+++ b/style.css
@@ -6,13 +6,33 @@
 
 html,body{
 	height: 100%;
-	background: black;
+	
 }
 
 .container-flex{
 	width: 100%;
-	height: 5rem;
-	border-radius: 1px 7rem;
-	background-color:greenyellow;
+	height: 8rem;
+	border-radius: 0 0 0 6rem;
+	background-color:royalblue;
 }
 
+.logo h1{
+	color: white;
+	font-size: 1.5rem;
+	padding: 1.6rem 6rem;
+}
+
+
+.navbar {
+	margin: 0 22rem;
+	width: 48rem;
+	border-radius: 0.5rem;
+}
+
+.form-switch{
+	margin: -3.4rem 60rem;
+}
+
+.btn{
+	background-color:royalblue
+}
