--- a/style.css
+++ b/style.css
@@ -6,38 +6,51 @@
 
 html,body{
 	height: 100%;
-	
 }
 
-.container-flex{
-	width: 100%;
-	height: 8rem;
-	border-radius: 0 0 0 6rem;
-	background-color:royalblue;
+
+
+.logo {
+	width: 100% ;
+	position: relative;
+	background-image: url("../assets/desktop/bg-pattern-header.svg");
+	background-repeat: no-repeat;
+	background-size: cover; 
 }
 
 .logo h1{
-	color: white;
+	top: 4rem;
+	left: 10rem ;
+	position: absolute;
+	color: black;
 	font-size: 1.5rem;
-	padding: 1.6rem 6rem;
 }
 
 
 .navbar {
-	margin: 2.5rem 20rem;
-	width: 48rem;
-	border-radius: 0.5rem;
-}
-
-.form-switch{
-	margin: -3.5rem 60rem;
-}
-
-.btn{
-	background-color:royalblue
-}
-
-.row{
-	padding: 9rem 7rem;
+	top: 1.8rem;
+	position: absolute;
+	margin: 5.5rem 20rem;
 	width: 55rem;
+	border-radius: 0.5rem;
+
+}
+
+
+.row{ 
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.card{
+	width: 18rem;
+	height: 15rem;
+}
+
+img{
+	width: 2rem;
+	height: 2rem;
+	margin: -1rem 1rem;
 }
