--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 
 html,body{
 	height: 100%;
+	
+}
+
+body{
+	background-color: aquamarine;
 }
 
 
@@ -33,26 +38,10 @@ html,body{
 	margin: 5.5rem 20rem;
 	width: 55rem;
 	border-radius: 0.5rem;
-
-}
-
-.box {	
-	display: inline-flex;
-	margin: 0 6rem ;
-}
-
-.card{
-	margin: 4rem;
-}
-
-.card img{
-	width: 2.5rem;
-	height: 2.5rem;
-	margin: -3.5rem  1rem 0;
 }
 
 #empregos{
-	width: 25rem;
-	height: 22rem;
-
+	margin: 0 10rem 0 ;
+	width: 22rem;
 }
+
